helm/template/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: test-sandbox
  name: test-sandbox-deployment
  namespace: sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-sandbox
  strategy: {}
  template:
    metadata:
      labels:
        app: test-sandbox
    spec:
      containers:
      - image: ghcr.io/cgiacomini/test-sandbox:e5abae61baf3388e5d0313e20678814337d494a5
        name: test-sandbox
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
        resources: {}
