helm/template/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-sandbox-ingress
  namespace: sandbox
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  ingressClassName: nginx
  rules:
    - host: test-sandbox.singleton.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-sandbox
                port:
                  number: 8080
